<resources>
    <string name="app_name">GreenLine</string>
    <string name="ID">担当者</string>
    <string name="remember_id">担当者IDを記憶する。</string>
    <string name="login">ログイン</string>
    <string name="input_id_hit">あなたのIDを入力してください</string>

    <string name="menu_title">モード選択</string>
    <string name="driverMode">ドライバーモード</string>
    <string name="centerWorkMode">センター作業モード</string>
    <string name="logout">ログアウト</string>
    <string name="menu_id_show">038 緑川 一郎</string>

    <string name="driverMenuOption_HoldOut">持出</string>
    <string name="driverMenuOption_Delivery">配達</string>
    <string name="driverMenuOption_DeliveryCompleteList">配達完了一覧</string>
    <string name="driverMenuOption_TakeOutCenter">センター持ち帰り</string>
    <string name="driverMenuOption_LoadList">積荷一覧</string>
    <string name="driverMenuOption_HighPricedItemPickup">高額商品　集荷</string>
    <string name="driverMenuOption_Medical_Institution_Search">医療機関検索</string>
    <string name="driverMenuOption_Plans">予定</string>

    <string name="enterTitle">持出</string>
    <string name="returnPrevious">戻る</string>
    <string name="newReceiptText">新規荷受</string>
    <string name="productList">荷受一覧</string>

    <string name="registration">登録</string>
    <string name="btn_nextPackage">次の荷物</string>
    <string name="driverMenu">ドライバー メニュー</string>
    <string name="barcodeResultTextInvoice">Invoice number: 1234567890</string>
    <string name="barcodeResultTextPaymentAmount">COD payment amount: ¥ 20,560</string>
    <string name="barcodeResult">Barcode Result:</string>
</resources>
