<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:background="#ffffff"/>
    <TextView
            android:id="@+id/textView_showID"
            android:text="@string/menu_id_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    <TextView
            android:id="@+id/textView_modeTitle"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_pink"
            android:text="@string/menu_title"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="vertical">
        <Button
                android:onClick="driverClick"
                android:id="@+id/button_driverMode"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:background="@drawable/button_blue"
                android:text="@string/driverMode"/>
        <Button
                android:id="@+id/button_workMode"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:background="@drawable/button_blue"
                android:text="@string/centerWorkMode"/>
    </LinearLayout>

    <Button
            android:id="@+id/button_logOut"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:textSize="20sp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:background="@drawable/button_green"
            android:text="@string/logout"/>
</LinearLayout>