<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:background="#ffffff"/>
    <TextView
            android:id="@+id/textView_showID"
            android:text="@string/menu_id_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    <TextView
            android:id="@+id/textView_enterTitle"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"

            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_pink"
            android:text="@string/enterTitle"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="40dp"
                  android:orientation="horizontal">
        <Button
                android:id="@+id/button_driverMode"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_blue"
                android:text="@string/newReceiptText"/>
        <Button
                android:id="@+id/button_workMode"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textSize="14sp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_blue"
                android:text="@string/productList"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="40dp"
                  android:orientation="horizontal">
        <Button
                android:id="@+id/button_returnToPrevious"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_green"
                android:text="@string/returnPrevious" />
        <Button
                android:id="@+id/button_returnToMenu"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_green"
                android:text="@string/menu_title"/>
    </LinearLayout>
</LinearLayout>