<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"
                    android:background="#ffffff"/>
            <TextView
                    android:id="@+id/textView_showID"
                    android:text="@string/menu_id_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/textView_enterTitle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingStart="70dp"
                    android:paddingEnd="70dp"

                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_pink"
                    android:text="@string/enterTitle"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border">
                <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="15dp">
                        <TextView
                                android:id="@+id/barcodeValue"
                                android:layout_width="match_parent"
                                android:textSize="15sp"
                                android:layout_height="wrap_content"
                                android:text="@string/barcodeResult"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:textSize="15sp"
                                android:layout_marginTop="20dp"
                                android:layout_height="wrap_content"
                                android:text="@string/barcodeResultTextInvoice"/>
                        <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="match_parent"
                                android:textSize="15sp"
                                android:layout_height="wrap_content"
                                android:text="@string/barcodeResultTextPaymentAmount"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <Button
                    android:id="@+id/button_workMode"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:textSize="14sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/button_blue"
                    android:text="@string/registration"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:layout_marginStart="30dp"
                          android:layout_marginEnd="30dp"
                          android:layout_marginTop="15dp"
                          android:orientation="horizontal">
                <Button
                        android:id="@+id/button_returnToPrevious"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/button_green"
                        android:text="@string/returnPrevious" />
                <Button
                        android:id="@+id/button_logOut"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/button_green"
                        android:text="@string/logout"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>