<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">
        <TextView
                android:text="@string/ID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:textAppearance="?android:textAppearanceLarge"
                android:labelFor="@id/editText_ID"
                android:id="@+id/textView_ID"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:inputType="textPersonName"
                android:hint="@string/input_id_hit"
                android:ems="10"
                android:id="@+id/editText_ID"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:text="@string/remember_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioButton_ID"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
        <TextView
                android:text="Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:textAppearance="?android:textAppearanceLarge"
                android:labelFor="@id/editText_password"
                android:id="@+id/textView_Password"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:inputType="textPassword"
                android:ems="10"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/editText_password"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <Button
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_green"
                    android:padding="20dp"
                    android:textStyle="bold|italic"
                    android:onClick="loginClick"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:id="@+id/button_login"/>
    </LinearLayout>


</LinearLayout>